--- a/vizualization/elec_coord_interp_loc.ipynb
+++ b/vizualization/elec_coord_interp_loc.ipynb
@@ -2,46 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "How many electrodes?12\n",
-      "What are the coordinates of most inner: 10 13 15\n",
-      "What are the coordinates of most outer: 20 23 25\n",
-      "Coordinations of 2nd elecrodes: \n",
-      "10.909090909090908 13.909090909090908 15.909090909090908\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Electrode coordinate interpolation for localization\n",
+    "## Electrode coordinate interpolation for localization\n",
+    "import numpy as np\n",
+    "#---\n",
     "\n",
     "elec_num = int(input('How many electrodes?'))\n",
     "\n",
     "startco = input('What are the coordinates of most inner: ')\n",
-    "startco=startco.split()\n",
+    "startco = startco.split()\n",
+    "startco = np.asarray(startco)\n",
+    "startco = startco.astype(float)\n",
     "\n",
     "endco = input('What are the coordinates of most outer: ')\n",
-    "endco=endco.split()\n",
+    "endco = endco.split()\n",
+    "endco = np.asarray(endco)\n",
+    "endco = endco.astype(float)\n",
     "\n",
-    "Sndco=[1, 2, 3]\n",
+    "xyz = np.empty((elec_num, len(startco)))\n",
     "for i in range(len(startco)):\n",
-    "  Sndco[i] = float(startco[i])+(float(endco[i])-float(startco[i]))/(elec_num-1)\n",
-    "\n",
-    "print ('Coordinations of 2nd elecrode''s: ')\n",
-    "print(' '.join(map(str, Sndco)))"
+    "    xyz[:,i] = np.linspace(startco[i], endco[i], elec_num)\n",
+    "for i in range(elec_num):\n",
+    "    print (\"Coordinates for electrode number %d:\" % float(i+1))       \n",
+    "    print(' '.join(map(str, xyz[i,:])))\n",
+    "    print(' ')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -60,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
